# SentinelOps

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  ORIGINAL_REQUEST.md  PROGRESS.md  PROJECT.md  README.md  SETUP.md  TEST_INFRA.md  TEST_READY.md  VERIFICATION.md  docker-compose.yml  pyproject.toml
Docs/: PRD.md  SETUP_GUIDE.md
data/: historical_incidents.csv
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: bad-app.yaml
scripts/: baseline_single_agent.py  ingest_historical_data.py  load_test.py  load_test_v2.py  memory_profile.py  memory_profile_v2.py  run_e2e.sh  seed_incidents.py  setup_local_prod.sh  start.sh
scripts/profiles/: profile_1000_signals.json  profile_200_signals.json
src/sentinelops/: __init__.py  main.py  orchestrator.py
tests/e2e/: README.md  conftest.py  test_tier1_connectivity.py  test_tier2_human_flow.py  test_tier2_single_incident.py  test_tier3_learning_loop.py  test_tier4_safety.py  test_tier4_ui.py  test_tier5_adversarial.py  test_tier5_boundary.py  test_tier5_concurrency.py  test_tier5_connector_failures.py  test_tier5_human_flow_adversarial.py  test_tier5_malformed.py  test_tier5_memory_edge_cases.py
tests/integration/: test_api_lifecycle.py  test_memory_load.py  test_sprint2_lifecycle.py
tests/unit/: test_aws_connector.py  test_azure_connector.py  test_connector_expansion.py  test_coverage_gaps.py  test_gcp_connector.py  test_hardening.py  test_kubernetes_real.py  test_milestone1_additions.py  test_milestone1_stress.py  (+10 more)
(+41 files in other folders)
