[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelops"
version = "1.0.0"
description = "Confidence-Driven Autonomous SRE Remediation Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "openai>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "scipy>=1.13.0",
    "networkx>=3.3",
    "python-telegram-bot>=21.3",
    "apscheduler>=3.10.0",
    "kubernetes>=30.1.0",
    "python-dotenv>=1.0.0",
    "websockets>=16.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
azure = ["azure-identity>=1.17.0", "azure-mgmt-containerservice>=30.0.0"]
gcp = ["google-cloud-container>=2.47.0", "google-auth>=2.30.0"]
alibaba = ["alibabacloud_cs20151215>=5.0.0", "alibabacloud_tea_openapi>=0.3.0"]
all-clouds = ["sentinelops[aws,azure,gcp,alibaba]"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: marks tests as integration tests (may need kind/minikube)",
    "tier5: marks tests as tier 5 edge case / concurrency / boundary tests",
]
